[FIX] change alignment of question numbers and question text.

--- a/questionnaire/static/css/application.css
+++ b/questionnaire/static/css/application.css
@@ -227,9 +227,9 @@ form ul li{
 .question-number{
     color: #0080FF;
     font-size: 11px;
-    display: inline-block;
+    display: table-cell;
 }
 .question-text{
     padding-left: 10px;
-    display: inline-block;
+    display: table-cell;
 }
